--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ name                     : "pibook"
 description              : "Programming Interactivity Greek Book."
 url                      : "https://guileless-arithmetic-491a4e.netlify.app/"
 baseurl                  : ""
-repository               : "p17balo/site"
+repository               : "epidrome/pibook"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
