--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "images"]
 	path = images
 	url = https://github.com/p17balo/images.git
-    branch = master
+	branch = demo
 [submodule "_gallery"]
 	path = _gallery
 	url = https://github.com/p17balo/_gallery.git
