--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,10 @@
 [submodule "images"]
 	path = images
-	url = https://github.com/p17balo/images.git
+	url = https://www.github.com/p17balo/images
 	branch = demo
 [submodule "_gallery"]
 	path = _gallery
-	url = https://github.com/p17balo/_gallery.git
+	url = https://www.github.com/p17balo/_gallery
 	branch = master
 [submodule "_includes/extras"]
 	path = _includes/extras
