--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,12 @@
 	path = _includes/text
 	url = https://github.com/mibook/text.git
 	branch = main 
+[submodule "images"]
+	path = images
+	url = https://github.com/p17balo/images.git
+[submodule "_gallery"]
+	path = _gallery
+	url = https://github.com/p17balo/_gallery.git
+[submodule "bibliography"]
+	path = bibliography
+	url = https://github.com/pibook/bibliography.git
